--- a/index.html
+++ b/index.html
@@ -373,103 +373,103 @@
             style="--scroll-hint: 10%; --aspect-ratio: 3/2"
           >
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_36.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_36.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_2.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_2.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_4.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_4.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_5.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_5.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_6.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_6.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_7.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_7.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_8.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_8.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_9.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_9.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_11.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_11.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_12.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_12.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_13.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_13.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_14.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_14.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_15.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_15.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_16.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_16.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_17.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_17.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_18.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_18.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_19.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_19.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_20.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_20.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_21.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_21.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_22.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_22.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_23.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_23.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_24.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_24.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_25.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_25.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_27.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_27.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_28.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_28.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_29.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_29.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_30.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_30.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_31.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_31.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_32.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_32.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_33.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_33.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_34.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_34.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_35.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_35.jpg" />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="/assets/gallery-photos/photo_1.jpg" />
+              <img alt="" src="assets/gallery-photos/photo_1.jpg" />
             </sl-carousel-item>
           </sl-carousel>
         </div>
@@ -541,7 +541,7 @@
       <p><span id="current-year"></span> © SPELEMAFIJA.LV</p>
       <sl-divider vertical style="--width: 3px"></sl-divider>
       <a href="https://www.facebook.com/cosanostra.lv" rel="noreferrer" target="_blank">
-        <img src="/assets/fb_logo.svg" alt="Facebook logo icon" />
+        <img src="assets/fb_logo.svg" alt="Facebook logo icon" />
       </a>
     </footer>
     <script src="index.js"></script>
