--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <title class="lv translation-0">Spēle mafija</title>
   </head>
-  <body class="flex-column fade-in">
+  <body class="flex-column fade-in-slow">
     <main>
       <nav class="flex-row desktop-nav horizontal-margin">
         <div class="links">
