favicon and font size changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
       href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.0/cdn/themes/light.css"
     />
     <link rel="stylesheet" href="./styles/main.css" />
+    <meta
+      name="description"
+      content="Spēle Mafija Latvija | Aizraujošs un jautrs veids kā pavadīt korporatīvu vai citus svētkus!"
+    />
     <title class="lv translation-0">Spēle mafija</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.svg" />
   </head>
   <body class="flex-column fade-in-slow">
     <main>
@@ -373,103 +378,202 @@
             style="--scroll-hint: 10%; --aspect-ratio: 3/2"
           >
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_36.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_36.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_2.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_2.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_4.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_4.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_5.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_5.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_6.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_6.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_7.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_7.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_8.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_8.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_9.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_9.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_11.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_11.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_12.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_12.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_13.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_13.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_14.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_14.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_15.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_15.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_16.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_16.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_17.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_17.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_18.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_18.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_19.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_19.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_20.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_20.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_21.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_21.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_22.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_22.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_23.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_23.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_24.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_24.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_25.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_25.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_27.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_27.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_28.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_28.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_29.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_29.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_30.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_30.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_31.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_31.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_32.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_32.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_33.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_33.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_34.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_34.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_35.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_35.jpg"
+              />
             </sl-carousel-item>
             <sl-carousel-item>
-              <img alt="" src="assets/gallery-photos/photo_1.jpg" />
+              <img
+                alt="Photo of people playing game Mafia"
+                src="assets/gallery-photos/photo_1.jpg"
+              />
             </sl-carousel-item>
           </sl-carousel>
         </div>
