favicon mimetype change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       content="Spēle Mafija Latvija | Aizraujošs un jautrs veids kā pavadīt korporatīvu vai citus svētkus!"
     />
     <title class="lv translation-0">Spēle mafija</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
   </head>
   <body class="flex-column fade-in-slow">
     <main>
