--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
       href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.0/cdn/themes/light.css"
     />
     <link rel="stylesheet" href="./styles/main.css" />
+    <meta name="robots" content="noindex, nofollow" />
+    <meta
+      name="keywords"
+      content="spēle, spēles, mafija, korporatīvs, svētki, pieaugušajiem, bērniem, Latvija"
+    />
+    <meta
+      name="keywords"
+      content="игра, игры, мафия, корпоратив, праздник, для взрослых, для детей, Латвия"
+    />
     <meta
       name="description"
       content="Spēle Mafija Latvija | Aizraujošs un jautrs veids kā pavadīt korporatīvu vai citus svētkus!"
