one more keyword

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta
       name="keywords"
-      content="spēle, spēles, mafija, korporatīvs, svētki, pieaugušajiem, bērniem, Latvija"
+      content="spēle, spēles, mafija, korporatīvs, svētki, pieaugušajiem, bērniem, Latvija, spelemafija.lv"
     />
     <meta
       name="keywords"
