--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           </p>
           <br />
           <br />
-          <h3 class="lv translation-15">Ar prieku Jūs gaidīsim jau tuvākajā ceturtdienā!</h3>
+          <h3 class="lv translation-15">Ar prieku Jūs gaidīsim uz spēlēm!</h3>
         </div>
       </div>
       <div id="rules-page-content" class="hidden content-page horizontal-margin fade-in">
@@ -450,12 +450,6 @@
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_13.jpg"
-              />
-            </sl-carousel-item>
-            <sl-carousel-item>
-              <img
-                alt="Photo of people playing game Mafia"
-                src="assets/gallery-photos/photo_14.jpg"
               />
             </sl-carousel-item>
             <sl-carousel-item>
