--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           </p>
           <br />
           <br />
-          <h3 class="lv translation-15">Ar prieku Jūs gaidīsim uz spēlēm!</h3>
+          <h3 class="lv translation-15">Ar prieku gaidīsim Jūs uz spēlēm!</h3>
         </div>
       </div>
       <div id="rules-page-content" class="hidden content-page horizontal-margin fade-in">
