seo and performance

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.0/cdn/themes/light.css"
     />
     <link rel="stylesheet" href="./styles/main.css" />
-    <meta name="robots" content="noindex, nofollow" />
     <meta
       name="keywords"
       content="spēle, spēles, mafija, korporatīvs, svētki, pieaugušajiem, bērniem, Latvija, spelemafija.lv"
@@ -21,7 +20,7 @@
       name="description"
       content="Spēle Mafija Latvija | Aizraujošs un jautrs veids kā pavadīt korporatīvu vai citus svētkus!"
     />
-    <title class="lv translation-0">Spēle mafija</title>
+    <title class="lv translation-0" property="og:title">Spēle mafija</title>
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
   </head>
   <body class="flex-column fade-in-slow">
@@ -402,180 +401,210 @@
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_4.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_5.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_6.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_7.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_8.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_9.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_11.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_12.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_13.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_15.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_16.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_17.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_18.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_19.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_20.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_21.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_22.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_23.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_24.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_25.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_27.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_28.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_29.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_30.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_31.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_32.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_33.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_34.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_35.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
                 alt="Photo of people playing game Mafia"
                 src="assets/gallery-photos/photo_1.jpg"
+                loading="lazy"
               />
             </sl-carousel-item>
           </sl-carousel>
@@ -647,14 +676,19 @@
     <footer class="flex-row">
       <p><span id="current-year"></span> © SPELEMAFIJA.LV</p>
       <sl-divider vertical style="--width: 3px"></sl-divider>
-      <a href="https://www.facebook.com/cosanostra.lv" rel="noreferrer" target="_blank">
+      <a
+        href="https://www.facebook.com/cosanostra.lv"
+        rel="noreferrer"
+        target="_blank"
+        property="og:url"
+      >
         <img src="assets/fb_logo.svg" alt="Facebook logo icon" />
       </a>
     </footer>
     <script src="index.js"></script>
     <script
       type="module"
-      src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.0/cdn/shoelace.js"
+      src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.0/cdn/shoelace-autoloader.js"
     ></script>
   </body>
 </html>
