--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <meta
       name="keywords"
-      content="spēle, spēles, mafija, korporatīvs, svētki, pieaugušajiem, bērniem, Latvija, spelemafija.lv"
+      content="spēle mafija, korporatīvs, svētki, pieaugušajiem, bērniem, Latvija, spelemafija.lv"
     />
     <meta
       name="keywords"
-      content="игра, игры, мафия, корпоратив, праздник, для взрослых, для детей, Латвия"
+      content="игра мафия, корпоратив, праздник, для взрослых, для детей, Латвия"
     />
     <meta
       name="description"
@@ -84,7 +84,7 @@
         <div class="hero-title flex-column">
           <h1 class="game-title lv translation-6">Spēle</h1>
           <hr class="title-divider" />
-          <h1 class="mafia-title lv translation-7">Mafija</h1>
+          <h2 class="mafia-title lv translation-7">Mafija</h2>
         </div>
         <div class="hero-explanation flex-column">
           <div class="blur-container flex-column">
