--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.0/cdn/themes/light.css"
     />
     <link rel="stylesheet" href="./styles/main.css" />
+    <meta name="robots" content="index, follow">
     <meta
       name="keywords"
       content="spēle mafija, korporatīvs, svētki, pieaugušajiem, bērniem, Latvija, spelemafija.lv"
