--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="lv">
+<html lang="lv-LV">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,13 +11,13 @@
     <meta name="robots" content="index, follow">
     <meta
       name="keywords"
-      content="spēle mafija, korporatīvs, svētki, pieaugušajiem, bērniem, Latvija, spelemafija.lv"
+      content="spēle mafija, korporatīvs, svētki, pieaugušajiem, bērniem, spelemafija.lv"
     />
     <meta
       name="description"
-      content="Spēle Mafija Latvija | Aizraujošs un jautrs veids kā pavadīt korporatīvu vai citus svētkus!"
+      content="Spēle Mafija | Aizraujošs un jautrs veids kā pavadīt korporatīvu vai citus svētkus!"
     />
-    <title class="lv translation-0" property="og:title">Spēle mafija</title>
+    <title class="lv translation-0" property="og:title">Spēle mafija - veids kā plašākā cilvēku lokā aizraujoši pavadīt laiku!</title>
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
   </head>
   <body class="flex-column fade-in-slow">
