--- a/index.html
+++ b/index.html
@@ -384,40 +384,40 @@
           >
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_36.jpg"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_2.jpg"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_4.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_5.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_6.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_7.jpg"
                 loading="lazy"
               />
@@ -431,14 +431,14 @@
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_9.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_11.jpg"
                 loading="lazy"
               />
@@ -452,154 +452,154 @@
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_13.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_15.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_16.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_17.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_18.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_19.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_20.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_21.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_22.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_23.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_24.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_25.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_27.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_28.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_29.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_30.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_31.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_32.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_33.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_34.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_35.jpg"
                 loading="lazy"
               />
             </sl-carousel-item>
             <sl-carousel-item>
               <img
-                alt="Photo of people playing game Mafia"
+                alt="Foto ar Spēle Mafija spēlētājiem"
                 src="assets/gallery-photos/photo_1.jpg"
                 loading="lazy"
               />
