--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       </div>
       <div id="main-page-content" class="flex-column visible horizontal-margin fade-in">
         <div class="hero-title flex-column">
-          <h1 class="game-title lv translation-6">Spēle</h1>
+          <h1 class="game-title lv translation-6">Spēle<span class="hidden">Mafija</span></h1>
           <hr class="title-divider" />
-          <h2 class="mafia-title lv translation-7">Mafija</h2>
+          <h2 class="mafia-title lv translation-7"><span class="hidden">Spēle</span>Mafija</h2>
         </div>
         <div class="hero-explanation flex-column">
           <div class="blur-container flex-column">
